--- a/build.xml
+++ b/build.xml
@@ -19,34 +19,34 @@
 		</classpath>
 	</taskdef>
 
-	<!--<taskdef name="blancoconstants" classname="blanco.constants.task.BlancoConstantsTask">-->
-		<!--<classpath>-->
-			<!--<fileset dir="lib" includes="*.jar" />-->
-			<!--<fileset dir="lib.ant" includes="*.jar" />-->
-		<!--</classpath>-->
-	<!--</taskdef>-->
+	<taskdef name="blancoconstants" classname="blanco.constants.task.BlancoConstantsTask">
+		<classpath>
+			<fileset dir="lib" includes="*.jar" />
+			<fileset dir="lib.ant" includes="*.jar" />
+		</classpath>
+	</taskdef>
 
-	<!--<taskdef name="blancometa2xml" classname="blanco.meta2xml.task.BlancoMeta2XmlTask">-->
-		<!--<classpath>-->
-			<!--<fileset dir="lib" includes="*.jar" />-->
-			<!--<fileset dir="lib.ant" includes="*.jar" />-->
-		<!--</classpath>-->
-	<!--</taskdef>-->
+	<taskdef name="blancoresourcebundle" classname="blanco.resourcebundle.task.BlancoResourceBundleTask">
+		<classpath>
+			<fileset dir="lib" includes="*.jar" />
+			<fileset dir="lib.ant" includes="*.jar" />
+		</classpath>
+	</taskdef>
 
-	<!--<taskdef name="blancoresourcebundle" classname="blanco.resourcebundle.task.BlancoResourceBundleTask">-->
-		<!--<classpath>-->
-			<!--<fileset dir="lib" includes="*.jar" />-->
-			<!--<fileset dir="lib.ant" includes="*.jar" />-->
-		<!--</classpath>-->
-	<!--</taskdef>-->
-
-	<!--<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask">-->
-		<!--<classpath>-->
-			<!--<fileset dir="lib" includes="*.jar" />-->
-			<!--<fileset dir="lib.ant" includes="*.jar" />-->
-		<!--</classpath>-->
-	<!--</taskdef>-->
-
+	<taskdef name="blancovalueobject" classname="blanco.valueobject.task.BlancoValueObjectTask">
+		<classpath>
+			<fileset dir="lib" includes="*.jar" />
+			<fileset dir="lib.ant" includes="*.jar" />
+		</classpath>
+	</taskdef>
+	
+	<taskdef name="xml2meta" classname="blanco.xml2meta.task.BlancoXml2MetaTask">
+	<classpath>
+		<fileset dir="lib" includes="*.jar" />
+		<fileset dir="lib.ant" includes="*.jar" />
+	</classpath>
+	</taskdef>
+	
 	<!--&lt;!&ndash; Antタスク定義 end &ndash;&gt;-->
 
 	<!--<target name="pack">-->
@@ -75,40 +75,26 @@
 
 	<!--</target>-->
 
-	<!--<target name="jar">-->
-		<!--<echo>building jar</echo>-->
+	<target name="jar">
+		<echo>building jar</echo>
 
 		<!--&lt;!&ndash; 定義書読込設定XMLファイル(blancoCalcParserが利用) をコピーします。 &ndash;&gt;-->
 		<!--<copy file="src/blanco/meta2xml/BlancoMeta2XmlMeta2Xml.xml" todir="bin/blanco/meta2xml" />-->
 
-		<!--<delete file="${project.main.jar}" />-->
-		<!--<jar destfile="${project.main.jar}">-->
+		<delete file="${project.main.jar}" />
+		<jar destfile="${project.main.jar}">
 			<!--<zipfileset dir="doc" prefix="doc" />-->
-			<!--&lt;!&ndash; classの取り込み (※sampleは除外) &ndash;&gt;-->
-			<!--<zipfileset dir="bin" includes="**/*" excludes="blanco/sample/**" />-->
-			<!--&lt;!&ndash; Javaソースコード(通常)の取り込み (※sampleは除外) &ndash;&gt;-->
-			<!--<zipfileset dir="src" includes="**/*" prefix="src" excludes="blanco/sample/**" />-->
-			<!--&lt;!&ndash; Javaソースコード(自動生成)の取り込み (※sampleは除外) &ndash;&gt;-->
-			<!--<zipfileset dir="blanco/main" includes="**/*.java" prefix="src" excludes="blanco/sample/**" />-->
-			<!--&lt;!&ndash; プロパティファイルの取り込み &ndash;&gt;-->
-			<!--<zipfileset dir="blanco/main" includes="**/*.properties" excludes="blanco/sample/**" />-->
-		<!--</jar>-->
-	<!--</target>-->
+			<!-- classの取り込み (※sampleは除外) -->
+			<zipfileset dir="bin" includes="**/*" excludes="blanco/sample/**" />
+			<!-- Javaソースコード(通常)の取り込み (※sampleは除外) -->
+			<zipfileset dir="src" includes="**/*" prefix="src" excludes="blanco/sample/**" />
+			<!-- Javaソースコード(自動生成)の取り込み (※sampleは除外) -->
+			<zipfileset dir="blanco/main" includes="**/*.java" prefix="src" excludes="blanco/sample/**" />
+			<!-- プロパティファイルの取り込み -->
+			<zipfileset dir="blanco/main" includes="**/*.properties" excludes="blanco/sample/**" />
+		</jar>
+	</target>
 
-	<!--<target name="compile">-->
-		<!--<delete dir="bin" />-->
-		<!--<mkdir dir="bin" />-->
-		<!--<javac destdir="bin" debug="true" source="1.8" target="1.8" fork="true" encoding="${encoding}">-->
-			<!--<src path="blanco/main/" />-->
-			<!--<src path="src/" />-->
-			<!--<classpath>-->
-				<!--&lt;!&ndash; ワイルドカードで一括取り込み &ndash;&gt;-->
-				<!--<fileset dir="lib" includes="*.jar" />-->
-				<!--<pathelement path="${eclipse.dir}/plugins/org.junit_3.8.2.v20080602-1318/junit.jar" />-->
-			<!--</classpath>-->
-			<!--<include name="**/*.java" />-->
-		<!--</javac>-->
-	<!--</target>-->
 
 	<!--<target name="javadoc">-->
 		<!--<echo>JavaDocを生成します。</echo>-->
@@ -134,18 +120,40 @@
 	<!--</target>-->
 	<!---->
 	
-	<target name="meta">
-		<blancoanttask metadir="meta/rev/program" encoding="${encoding}" />
-		<!--<blancoconstants metadir="meta/rev/program" encoding="${encoding}" />-->
-		<!--<blancoresourcebundle metadir="meta/rev/program" commenttimestamp="false" encoding="${encoding}" />-->
-		<!--<blancovalueobject metadir="meta/rev/program" encoding="${encoding}" />-->
+	<!--prepareで作ったものは基本的に開発者以外触らない-->
+	<!--meta/programはprepareで使うもの-->
+	<target name="prepare">
+		<blancoanttask metadir="meta/prepare" encoding="${encoding}" />
+		<blancoconstants metadir="meta/prepare" encoding="${encoding}" />
+		<blancoresourcebundle metadir="meta/prepare" commenttimestamp="false" encoding="${encoding}" />
+		<blancovalueobject metadir="meta/prepare" encoding="${encoding}" />
 		<!---->
-		<!--&lt;!&ndash; TODO: ここに自身のantタスクを追加してください。 &ndash;&gt;-->
-		<!--<blancometa2xml metadir="meta/rev/program" targetdir="blanco" encoding="${encoding}" verbose="true" />-->
+		<!--&lt;!&ndash;&lt;!&ndash; TODO: ここに自身のantタスクを追加してください。 &ndash;&gt;&ndash;&gt;-->
+		<!--<blancoxml2meta metadir="meta/program" targetdir="blanco" encoding="${encoding}" verbose="true" />-->
 	</target>
-
-	<target name="build" depends="meta,compile,jar,pack">
+	
+	<target name="xml2meta">
+		<xml2meta xmldir="xml" defxml="/Users/superkinoko/work/ueo/blancoXml2Meta/src/blanco/xml2meta/BlancoMeta2XmlMeta2Xml.xml" encoding="${encoding}" verbose="true" />
 	</target>
+	
+	<target name="compile">
+		<delete dir="bin" />
+		<mkdir dir="bin" />
+		<javac destdir="bin" debug="true" source="1.8" target="1.8" fork="true" encoding="${encoding}">
+			<src path="blanco/main/" />
+			<src path="src/" />
+			<classpath>
+				<!-- ワイルドカードで一括取り込み -->
+				<fileset dir="lib" includes="*.jar" />
+				<fileset dir="lib.ant" includes="*.jar" />
+				<!--<pathelement path="${eclipse.dir}/plugins/org.junit_3.8.2.v20080602-1318/junit.jar" />-->
+			</classpath>
+			<include name="**/*.java" />
+		</javac>
+	</target>
+	
+	<!--<target name="build" depends="meta,compile,jar,pack">-->
+	<!--</target>-->
 
 	<target name="cleanblanco">
 		<delete dir="blanco" />
